修复 xss 注入漏洞

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=535d9bffe03c2c472a01",
+    "/css/app.css": "/css/app.css?id=721baedcc5373f588c11"
 }
